# zettel-cli

./: Cargo.toml  INSTALL.md  README.md
src/: lib.rs  main.rs
src/commands/: lucky.rs  mod.rs  new.rs  preset.rs  search.rs
src/config/: loader.rs  mod.rs  path.rs  resolver.rs  types.rs
src/templates/: context.rs
src/utils/: fs.rs  parse.rs
tests/: config_resolver_test.rs  config_test.rs  lucky_test.rs  new_test.rs  preset_test.rs  search_test.rs
