[package]
name = "zettel-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"
anyhow = "1.0"
walkdir = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
shellexpand = "3"
minijinja = "2"
chrono = "0.4"
slug = "0.1"
regex = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
indoc = "2"
